add extension icons

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,36 @@
 {
   "manifest_version": 3,
   "name": "Redirect Inspector",
-  "description": "Inspect and record redirect chains directly from your browser.",
-  "version": "0.1.0",
+  "description": "Inspect and visualize redirect chains directly in your browser.",
+  "version": "1.0.0",
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "action": {
+    "default_title": "Redirect Inspector",
+    "default_popup": "src/popup/index.html",
+    "default_icon": {
+      "16": "icons/16.png",
+      "32": "icons/32.png",
+      "48": "icons/48.png"
+    }
+  },
   "background": {
     "service_worker": "src/background/service-worker.js",
     "type": "module"
   },
   "permissions": [
     "webRequest",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "host_permissions": [
     "<all_urls>"
   ],
-  "action": {
-    "default_popup": "src/popup/index.html",
-    "default_title": "Redirect Inspector"
-  }
+  "author": "investblog",
+  "homepage_url": "https://github.com/investblog/redirect-inspector",
+  "minimum_chrome_version": "110"
 }
