--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build & Release Chrome Extension
 on:
   push:
     tags:
-      - 'v*'     # сработает на v0.1.0, v1.0.0, v1.2.3
+      - 'v*'   # run only on tags like v1.0.0
 
 jobs:
   build-and-release:
@@ -13,28 +13,26 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # (опционально) можно проверить, что есть manifest.json
-      - name: Show repo tree
-        run: |
-          pwd
-          ls -R .
+      - name: Create dist folder
+        run: mkdir -p dist
 
-      - name: Create zip package
+      - name: Build zip
         run: |
-          mkdir -p dist
-          # в архив кладём всё, что нужно Chrome'у
-          zip -r dist/redirect-inspector.zip manifest.json src LICENSE README.md \
-            -x "**/.git*" "**/.github*"  # исключаем служебное
+          zip -r dist/redirect-inspector.zip \
+            manifest.json \
+            src \
+            icons \
+            LICENSE \
+            README.md \
+            -x "**/.git*" "**/.github*" "**/node_modules/*"
 
-      # Загружаем zip как артефакт (на всякий)
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: redirect-inspector
           path: dist/redirect-inspector.zip
 
-      # Делаем релиз и прикрепляем zip
-      - name: Create GitHub release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist/redirect-inspector.zip
