Fix webNavigation permission and guard

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
   "permissions": [
     "webRequest",
     "storage",
-    "tabs"
+    "tabs",
+    "webNavigation"
   ],
   "host_permissions": [
     "<all_urls>"
