--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
   "host_permissions": [
     "<all_urls>"
   ],
-  "author": "investblog",
-  "homepage_url": "https://github.com/investblog/redirect-inspector",
+  "author": "301.st — Smart Traffic <support@301.st>",
+  "homepage_url": "https://301.st/?utm_source=chrome-web-store&utm_medium=listing&utm_campaign=redirect-inspector",
   "minimum_chrome_version": "110"
 }
